# feobank

./: .env  .gitignore  Cargo.toml  README.md  shell.nix
client/: Cargo.toml
migrations/: 20210401230647_account.sql  20210401230726_bill.sql  20210401230800_transactions.sql  20210401230809_account_transactions.sql  20210402000320_user.sql
server/: .env  Cargo.toml  shell.nix
server/src/: account.rs  main.rs  session.rs
src/: account.rs  bill.rs  lib.rs  session.rs  user.rs
