[package]
name = "server"
version = "0.1.0"
authors = ["SeraphyBR <luisjuniorbr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono" ] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
